--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dill==0.3.7
 dnspython==2.4.2
 ecdsa==0.18.0
 email-validator==2.1.0.post1
+et_xmlfile==2.0.0
 exceptiongroup==1.2.0
 fastapi==0.104.1
 google-api-core==2.17.1
@@ -39,6 +40,7 @@ MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy==1.6.1
 mypy-extensions==1.0.0
+openpyxl==3.1.5
 packaging==23.2
 passlib==1.7.4
 pathspec==0.12.1
