--- a/requirements.txt
+++ b/requirements.txt
@@ -40,8 +40,10 @@ MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy==1.6.1
 mypy-extensions==1.0.0
+numpy==2.2.0
 openpyxl==3.1.5
 packaging==23.2
+pandas==2.2.3
 passlib==1.7.4
 pathspec==0.12.1
 platformdirs==3.11.0
@@ -73,6 +75,7 @@ tomli==2.0.1
 tomlkit==0.12.2
 types-passlib==1.7.7.13
 typing_extensions==4.8.0
+tzdata==2024.2
 tzlocal==5.2
 urllib3==2.2.1
 uvicorn==0.23.2
